--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "It's a MERN stack application which works like bit.ly, it redirects to another site and makes statistics of entering this link",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "cross-env NODE_ENV=production node app.js",
     "server": "nodemon app.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "client:install": "npm i --prefix client",
+    "client:build": "npm run build --prefix client",
+    "dev": "cross-env NODE_ENV=development concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -36,6 +38,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "concurrently": "^6.0.0",
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.7"
   }
 }
